// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Label/HoverInfoLabel Hover Info Label 1`] = `
<div>
  <p
    aria-label="hover info"
    class="MuiTypography-root MuiTypography-body1 css-1d0cpfm-MuiTypography-root"
    data-mui-internal-clone-element="true"
  >
    Some label
    <span />
  </p>
</div>
`;

exports[`Storyshots Label/HoverInfoLabel Hover Info Label Info 1`] = `
<div>
  <p
    class="MuiTypography-root MuiTypography-body1 css-1d0cpfm-MuiTypography-root"
    data-mui-internal-clone-element="true"
  >
    Some label
    <span />
  </p>
</div>
`;

exports[`Storyshots Label/HoverInfoLabel Icon Position 1`] = `
<div>
  <p
    class="MuiTypography-root MuiTypography-body1 css-1d0cpfm-MuiTypography-root"
    data-mui-internal-clone-element="true"
  >
    <span />
    Some label
  </p>
</div>
`;

exports[`Storyshots Label/HoverInfoLabel Label Props 1`] = `
<div>
  <p
    class="MuiTypography-root MuiTypography-body2 css-1qbbu4b-MuiTypography-root"
    data-mui-internal-clone-element="true"
  >
    Some label
    <span />
  </p>
</div>
`;
